--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheets/aboutus.css" />
-    <script src="https://kit.fontawesome.com/f93354d676.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f93354d676.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Aboutus</title>
   </head>
   <body>
@@ -17,29 +20,24 @@
       <h1>EXPECT THE BEST...</h1>
     </section>
     <!-- visionmission -->
-    <section class="visionmission">
-      <div class="vision">
-        <span class="visionspan">
-          <h2>OUR VISION</h2>
-        </span>
+    <section class="missionNew">
+      <div class="ourvision">
+        <h1>OUR VISION</h1>
         <p>
           To be an Indian’s best training Institute to impart understanding and
           application-based education to the young talents and carving them into
           creative human resources who are having sufficient knowledge, with
           competitive edge, National Integrity and social responsibility and who
           are the input for India's top Medical Engineering and professional
-          colleges.
+          colleges. OUR MISSION
         </p>
       </div>
-      <div class="mission">
-        <span class="missionspan">
-          <h2>OUR MISSION</h2>
-        </span>
+      <div class="ourmission">
+        <h1>OUR MISSION</h1>
         <p>
           1. To give awareness on competitive exams among the school students
           and develop science and maths foundation in school going children.
         </p>
-
         <p>
           2.To impart state of art training for the competitive exams such as
           NEET, JEE etc., to the students and develop competitive spirit to set
@@ -50,104 +48,212 @@
     <section class="leaders">
       <h1>Our Founders</h1>
       <div class="leadervideo">
-        <iframe width="725" height="425" src="https://www.youtube.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe
+          src="https://www.youtube.com/embed/xfek1WNPTRU"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
       </div>
     </section>
-      <!-- Timeline -->
-      <section class="timeline">
-        <h1>Our Journey So Far</h1>
-        <img src="../images/aboutus/group19.png" class="book" alt="" />
-        <div class="cards1">
-          
-          <p>
-            <span  class="span"><img  src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/64/000000/external-doctor-medical-itim2101-lineal-color-itim2101-2.png"/></span>
-            <span class="span"><img class="do" src="../images/aboutus/dot2.png"/></span>
-            <span>48 Students got MBBS SEATS through Govt Quota in Tamilnadu Medical Counselling <span style=color:red> 2017</span></span> 
-          </p>
+    <!-- Timeline -->
+    <!-- <section class="timeline">
+      <h1>Our Journey So Far</h1>
+      <img src="../images/aboutus/group19.png" class="book" alt="" />
+      <div class="cards1">
+        <p>
+          <span class="span"
+            ><img
+              src="https://img.icons8.com/external-itim2101-lineal-color-itim2101/64/000000/external-doctor-medical-itim2101-lineal-color-itim2101-2.png"
+          /></span>
+          <span class="span"
+            ><img class="do" src="../images/aboutus/dot2.png"
+          /></span>
+          <span
+            >48 Students got MBBS SEATS through Govt Quota in Tamilnadu Medical
+            Counselling <span style="color: red"> 2017</span></span
+          >
+        </p>
+      </div>
+      <div class="cards2">
+        <p>
+          <span class="span"
+            ><img
+              src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-trophy-reward-and-badges-justicon-flat-justicon-1.png"
+          /></span>
+          <span class="span"
+            ><img class="do" src="../images/aboutus/dot2.png"
+          /></span>
+          <span
+            >Salem District CEO Mrs. Gnanagowri has honoured our Student
+            Mr.Sarathkumar for securing NEET first mark in Salem Region in NEET
+            <span style="color: red"> 2018</span></span
+          >
+        </p>
+      </div>
+      <div class="cards3">
+        <p>
+          <span class="span"
+            ><img
+              src="https://img.icons8.com/color/64/000000/student-female.png"
+          /></span>
+          <span class="span"
+            ><img class="do" src="../images/aboutus/dot2.png"
+          /></span>
+          <span>
+            Salem District Collector Mrs. Rohini has honoured our Student
+            Ms.Elakkiya G for securing NEET first mark in Salem Region in NEET
+            <span style="color: red"> 2019</span></span
+          >
+        </p>
+      </div>
+      <div class="cards4">
+        <p>
+          <span class="span"
+            ><img
+              src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-first-success-flatart-icons-flat-flatarticons.png"
+          /></span>
+          <span class="span"
+            ><img class="do" src="../images/aboutus/dot2.png"
+          /></span>
+          <span>
+            Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya
+            Priyadharshini for securing NEET first mark in Salem Region in NEET
+            <span style="color: red"> 2020</span>.</span
+          >
+        </p>
+      </div>
+    </section> -->
+    <h1 class="ourjourney">Our Journey So Far</h1>
+    <section class="timelineNew">
+      <img
+        class="timelineImg"
+        src="../images/aboutus/group19.png"
+        class="book"
+        alt=""
+      />
+      <div class="timelineContent">
+        <div class="timelineIcon">
+          <div class="timelineDiv">
+            <span
+              ><img
+                src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-first-success-flatart-icons-flat-flatarticons.png"
+            /></span>
+            <span><img src="../images/aboutus/dot2.png" /></span>
+          </div>
+          <div class="timelineDiv">
+            <span
+              ><img
+                src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-trophy-reward-and-badges-justicon-flat-justicon-1.png"
+            /></span>
+            <span><img src="../images/aboutus/dot2.png" /></span>
+          </div>
+          <div class="timelineDiv">
+            <span
+              ><img
+                src="https://img.icons8.com/color/64/000000/student-female.png"
+            /></span>
+            <span><img src="../images/aboutus/dot2.png" /></span>
+          </div>
+
+          <div class="timelineDiv">
+            <span
+              ><img
+                src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-first-success-flatart-icons-flat-flatarticons.png"
+            /></span>
+            <span><img src="../images/aboutus/dot2.png" /></span>
+          </div>
         </div>
-        <div class="cards2">
+        <div class="timelinePara">
           <p>
-            <span  class="span"><img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-trophy-reward-and-badges-justicon-flat-justicon-1.png"/></span>
-            <span class="span"><img class="do" src="../images/aboutus/dot2.png"/></span>
-            <span>Salem District CEO Mrs. Gnanagowri has honoured our Student Mr.Sarathkumar for securing NEET first mark in Salem Region in NEET <span style=color:red> 2018</span></span> 
+            Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya
+            Priyadharshini for securing NEET first mark in Salem Region in NEET
           </p>
-        </div>
-        <div class="cards3">
           <p>
-            <span class="span"><img src="https://img.icons8.com/color/64/000000/student-female.png"/></span>
-            <span class="span"><img class="do" src="../images/aboutus/dot2.png"/></span>
-            <span> Salem District Collector Mrs. Rohini has honoured our Student Ms.Elakkiya G for securing NEET first mark in Salem Region in NEET <span style=color:red> 2019</span></span>
+            Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya
+            Priyadharshini for securing NEET first mark in Salem Region in NEET
           </p>
-        </div>
-        <div class="cards4">
           <p>
-            <span class="span"><img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-first-success-flatart-icons-flat-flatarticons.png"/></span>
-            <span class="span"><img class="do" src="../images/aboutus/dot2.png"/></span>
-            <span> Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya Priyadharshini for securing NEET first mark in Salem Region in NEET <span style=color:red> 2020</span>.</span>
+            Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya
+            Priyadharshini for securing NEET first mark in Salem Region in NEET
           </p>
+          <p>
+            Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya
+            Priyadharshini for securing NEET first mark in Salem Region in NEET
+          </p>
+          <p>Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya
+            Priyadharshini for securing NEET first mark in Salem Region in NEET</p>
+
+            <p>Our honourable CM appreciated our CLASSIC NEET student Ms.Sreya
+              Priyadharshini for securing NEET first mark in Salem Region in NEET</p>
         </div>
-      </section>
-      <section class="gallery">
-        <h1 style="padding:30px 0px;text-align: center;color: #568036;font-size: 40px;"><b>GALLERY</b></h1>
-        <div class="container" data-autoplay="true">
-          <div class="slide"> <img
-                  src="images/aboutus/Gallery1.jpg"
-                  alt="nature" /></div>
-          <div class="slide">
-              <img src="images/aboutus/Gallery2.jpg"
-                  alt="nature" />
-          </div>
-          <div class="slide">
-              <img src="images/aboutus/Gallery3.jpg"
-                  alt="nature" />
-          </div>
-          <div class="slide">
-              <img src="images/aboutus/Gallery4.jpg"
-                  alt="nature" />
-          </div>
-          <div class="slide">
-            <img src="images/aboutus/Gallery5.jpg"
-                alt="nature" />
-          </div>
-          <div class="slide">
-            <img src="images/aboutus/Gallery6.jpg"
-              alt="nature" />
-          </div>
-          <div class="slide">
-            <img src="images/aboutus/Gallery7.jpg"
-            alt="nature" />
-          </div>
-          <div class="slide">
-            <img src="images/aboutus/Gallery8.jpg"
-            alt="nature" />
-            </div>
-          <div class="slide">
-            <img src="images/aboutus/Gallery9.jpg"
-            alt="nature" />
-          </div>
-  
-          <button class="prev" onclick="prev()"><i class="fas fa-chevron-left" style="font-size: 45px;" ></i></button>
-          <button class="next" onclick="next()"><i class="fas fa-chevron-right" style="font-size: 45px;"></i></button>
-  
-  
+      </div>
+    </section>
+    <section class="gallery">
+      <h1
+        style="
+          padding: 30px 0px;
+          text-align: center;
+          color: #568036;
+          font-size: 40px;
+        "
+      >
+        <b>GALLERY</b>
+      </h1>
+      <div class="container" data-autoplay="true">
+        <div class="slide">
+          <img src="images/aboutus/Gallery1.jpg" alt="nature" />
+        </div>
+        <div class="slide">
+          <img src="images/aboutus/Gallery2.jpg" alt="nature" />
+        </div>
+        <div class="slide">
+          <img src="images/aboutus/Gallery3.jpg" alt="nature" />
+        </div>
+        <div class="slide">
+          <img src="images/aboutus/Gallery4.jpg" alt="nature" />
+        </div>
+        <div class="slide">
+          <img src="images/aboutus/Gallery5.jpg" alt="nature" />
+        </div>
+        <div class="slide">
+          <img src="images/aboutus/Gallery6.jpg" alt="nature" />
+        </div>
+        <div class="slide">
+          <img src="images/aboutus/Gallery7.jpg" alt="nature" />
+        </div>
+        <div class="slide">
+          <img src="images/aboutus/Gallery8.jpg" alt="nature" />
+        </div>
+        <div class="slide">
+          <img src="images/aboutus/Gallery9.jpg" alt="nature" />
+        </div>
+
+        <button class="prev" onclick="prev()">
+          <i class="fas fa-chevron-left" style="font-size: 45px"></i>
+        </button>
+        <button class="next" onclick="next()">
+          <i class="fas fa-chevron-right" style="font-size: 45px"></i>
+        </button>
       </div>
       <div class="dots_container" id="indicator"></div>
-      </section>
+    </section>
     <section class="app">
       <div class="apppage">
-        <img src="images/aboutus/phonebg.png" class="Messaging">
-        <h2>Get Our Learning<br/>App</h2>
-        <img src="images/aboutus/Vector2.png" class="vector3">
-        <img src="images/aboutus/Vector1.png" class="Vector2">
-        <img src="images/aboutus/Vector.png" class="vector1" >
-        <a href="https://play.google.com/store/apps/details?id=eduapplet.classicneet" ><img src="images/aboutus/download.jpg" /></a>
-
-      
+        <img src="images/aboutus/phonebg.png" class="Messaging" />
+        <h2>Get Our Learning<br />App</h2>
+        <img src="images/aboutus/Vector2.png" class="vector3" />
+        <img src="images/aboutus/Vector1.png" class="Vector2" />
+        <img src="images/aboutus/Vector.png" class="vector1" />
+        <a
+          href="https://play.google.com/store/apps/details?id=eduapplet.classicneet"
+          ><img src="images/aboutus/download.jpg"
+        /></a>
       </div>
     </section>
     <script src="javascripts/common.js"></script>
     <script src="javascripts/aboutus.js"></script>
     <%- include('./layout/footer') %>
-    
   </body>
 </html>
