--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -54,7 +54,7 @@
         </button>
         <div class="collapse" id="success-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
-            <li><a href="#" class="link-dark rounded ahover">Testimonials</a></li>
+            <li><a href="/admin/successstories/testimonials" class="link-dark rounded ahover">Testimonials</a></li>
           </ul>
         </div>
       </li>
