--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -360,38 +360,10 @@ iframe {
   padding: 2%;
 }
 /* gallery */
-h1{
-  text-align: center;
-  font-size: 50px;
-  color:#568036 ;
-  padding-top: 3%;
-  padding-bottom: 2%;
-}
-.button{
-  position: relative;
-  align-items: center;
-  justify-content:center;
-  display: flex;
-  flex-direction: row;
-}
-.btn{
-  border: none;
-  outline: none;
-  padding: 15px 18px;
-  background-color: #97909077;
-  cursor: pointer;
-  border-radius: 25px 0px 25px 0px;
-  margin-left: 2%;
-  font-size: 16px;
-}
-
-.btn:hover {
-  background-color: #60EFFF;
-}
-/* .gallery{
+.gallery{
   width: 100%;
   /* height: 102vh; */
-
+}
 .container {
   position: relative;
   width: 70%;
@@ -422,7 +394,7 @@ button {
   border: none;
   background: #fff;
   color:#000000;
-  padding: 10px 15px; 
+  /* padding: 10px 15px; */
   margin-top: -25px;
   font-size: 30px;
   z-index: 1000;
@@ -439,9 +411,9 @@ button {
 }
 
 
-button:hover {
+/* button:hover {
   background: rgba(32, 26, 26, 0.527);
-} 
+} */
 
 .dots_container {
   display: flex;
@@ -470,7 +442,7 @@ height:200px;}
 button {
   top: 50%;
 }
-} */
+}
 
 /* app */
 .app {
