--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -164,7 +164,7 @@ select, .stream3 button , .stream4 button  {
 .grid{
     position: relative;
     height: 10rem;
-    width: 22rem;
+    width: 30%;
     border: 1px solid black;
     display: flex;
     align-items: center;
@@ -175,7 +175,28 @@ iframe {
     z-index: 4;
 }
 .griditem{
+    width: 90%;
+    height: 260px;
     padding:.5rem;
     border: 15px solid #02c3d8;
     border-radius: 20px 0px 20px 0px;
+}
+@media (max-width:1100px) {
+    .gridcontainer {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width:800px) {
+    .gridcontainer {
+        width: 70%;
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+
+@media (max-width:600px) {
+    .gridcontainer {
+        width: 90%;
+        grid-template-columns: repeat(1,1fr);
+    }
 }
