--- a/views/results.ejs
+++ b/views/results.ejs
@@ -126,6 +126,7 @@
 
     <%- include('./layout/footer') %>
     <script src="javascripts/results.js"></script>
+    <script src="javascripts/common.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   </body>
 </html>
