--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -496,6 +496,7 @@ p {
 } */
 .HexagonDiv {
   width: 90%;
+  height: 72vh;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -536,7 +537,7 @@ p {
   margin: 5rem 0rem;
   justify-content: space-evenly;
   align-items: center;
-  height: 60vh;
+  height: 48vh;
   width: 100%;
 }
 /* .cardsDiv {
@@ -1149,12 +1150,11 @@ p {
   width: 90vw !important;
   overflow: hidden;
   /* display: flex; */
-  flex-direction: column;
   /* justify-content: space-around !important; */
 }
 .mySwiper1 {
   width: 70.7% !important;
-  height: 80vh !important;
+  height: 60vh !important;
 
 }
 .toppersDiv {
@@ -1171,9 +1171,10 @@ p {
   font-weight: 800;
 }
 
+
 .markNew {
-  background-color: white;
-  color: #369afe;
+  background-color: #EAE321;
+  color: #1182FE;
   padding: .5rem .8rem;
   border-radius: 20px 0px 20px 0px;
   /* border: 3px solid #000; */
@@ -1241,7 +1242,7 @@ p {
 .arrownext1 {
   
   position: absolute;
-  top: 61%;
+  top: 58%;
   /* transform: translateY(-50%); */
   right: 8% !important;
   transform: scale(1.5);
@@ -1252,7 +1253,7 @@ p {
 .arrowprev1 {
   
   position: absolute;
-  top: 61%;
+  top: 58%;
   left: 8% !important;
   transform: scale(1.5);
   font-weight: 1000 !important;
@@ -1474,7 +1475,7 @@ p {
 .sec-2 {
   /* background-color: blanchedalmond; */
   position: relative;
-  height: 86vh;
+  height: 83vh;
   /* min-height: 500px; */
   display: flex;
   align-items: center;
@@ -1515,7 +1516,6 @@ iframe {
     right: 16%;
     top: 64%;
   }
-
   .box1,
   .box2,
   .box3 {
