--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -90,7 +90,7 @@
   /* min-height: 560px; */
   width: 100%;
   display: flex;
-  min-height: fit-content !important;
+  min-height: 650px;
 }
 .homeLeft {
   position: relative;
@@ -287,7 +287,7 @@
   position: relative;
   padding-right: 1rem;
   
-  box-shadow: 2px 2px 60px rgba(4, 113, 255, 0.1);
+  /* box-shadow: 2px 2px 60px rgba(4, 113, 255, 0.1); */
 }
 
 .calenderCard p {
@@ -373,7 +373,7 @@ p {
   width: 90%;
   
   background-color: rgb(255, 255, 255);
-  box-shadow: 2px 2px 60px rgba(4, 113, 255, 0.1);
+  /* box-shadow: 2px 2px 60px rgba(4, 113, 255, 0.1); */
   transition: 0.3s all ease-in-out;
   /* padding: 2rem; */
   border-radius: 25px 0px 20px 0px;
@@ -385,7 +385,7 @@ p {
 }
 .calenderCard:hover {
   transform: scale(1.1);
-  box-shadow: 2px 2px 60px rgba(4, 113, 255, 0.2);
+  /* box-shadow: 2px 2px 60px rgba(4, 113, 255, 0.2); */
 }
 .calenderCard:hover .date {
   background: linear-gradient(90deg, #02c3d8, #0061ff);
@@ -543,7 +543,6 @@ p {
 } */
 .HexagonDiv {
   width: 90%;
-  height: 72vh;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -585,7 +584,7 @@ p {
   margin: 5rem 0rem;
   justify-content: space-evenly;
   align-items: center;
-  height: 48vh;
+  height: 60vh;
   width: 100%;
 }
 /* .cardsDiv {
@@ -839,6 +838,7 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 1rem 0rem 0rem 0rem;
   position: relative;
 }
 .ribbon {
@@ -1198,16 +1198,17 @@ p {
   width: 90vw !important;
   overflow: hidden;
   /* display: flex; */
+  flex-direction: column;
   /* justify-content: space-around !important; */
 }
 .mySwiper1 {
-  width: 70.7% !important;
+  width: 67.7% !important;
   height: 60vh !important;
-
+  min-height: 400px;
 }
 .toppersDiv {
   position: relative;
-  top: 20%;
+  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1215,39 +1216,29 @@ p {
   
 }
 .toppersDiv p  {
-  margin-top: 8px;
-  font-weight: 800;
+  margin-top: 1rem;
+  font-weight: bolder;
+  color: WHITE;
 }
-
-
 .markNew {
-  background-color: #EAE321;
-  color: #1182FE;
-  padding: .5rem .8rem;
+  background-color: #E3E522;
+  padding: .5rem 1rem;
   border-radius: 20px 0px 20px 0px;
-  /* border: 3px solid #000; */
-  font-size: 25px;
-}
-.nameNew{
-  font-size: 25px;
-  font-weight: 900 !important;
-  color: #FFF;
-}
-.colNew{
-  font-size: 18px;
-  font-weight: 200 !important;
-  color: #FFF;
+  color: #2B72E4 !important;
+  font-size: 20px;
+  
 }
 .mySwiper1 .swiper-slide {
-  width: 18rem!important;
-  height: 25rem !important;
-  background: linear-gradient(#60efffda,#369afe);
+  width: 20rem!important;
+  height: 24rem !important;
+  background: linear-gradient( 180deg,#60efffda , #369afe );
   position: relative;
   border-radius: 10px;
-  
+  justify-content: space-around;
   text-align: center;
   font-size: 18px;
-  top: 22%;
+  top: 50%;
+  transform: translateY(-50%);
   margin: 0rem 1rem !important;
   /* Center slide text vertically */
   display: -webkit-box;
@@ -1290,7 +1281,7 @@ p {
 .arrownext1 {
   
   position: absolute;
-  top: 58%;
+  top: 61%;
   /* transform: translateY(-50%); */
   right: 8% !important;
   transform: scale(1.5);
@@ -1301,7 +1292,7 @@ p {
 .arrowprev1 {
   
   position: absolute;
-  top: 58%;
+  top: 61%;
   left: 8% !important;
   transform: scale(1.5);
   font-weight: 1000 !important;
@@ -1422,13 +1413,12 @@ p {
   border-radius: 10px; */
 }
 .profile {
-  position: absolute;
-  left: 50%;
-  top: 22%;
-  transform: translate(-50%,-40%);
-  width: 150px; 
+  /* position: absolute; */
+  
+  
+  width: 50%;
   border-radius: 50%;
-  /* border: 2px solid black; */
+  
 }
 .topperImg {
   /* background-color:#A2D2FF; */
@@ -1476,6 +1466,10 @@ p {
   font-size: 14px;
   font-weight: 600;
   /* margin-bottom: 1.5rem; */
+}
+.nameNew {
+  font-size: 22px;
+  font-weight: 600;
 }
 .college {
   font-size: 14px;
@@ -1565,6 +1559,7 @@ iframe {
     right: 16%;
     top: 64%;
   }
+
   .box1,
   .box2,
   .box3 {
@@ -1696,6 +1691,7 @@ iframe {
 
 @media (max-width: 1100px) {
   .home {
+    min-height: fit-content;
     margin-bottom: 3rem;
   }
 
@@ -1925,6 +1921,7 @@ iframe {
 
 
     height: 100vh;
+    margin-bottom: 0rem;
   }
 
   /* .sliderRev {
@@ -2003,8 +2000,7 @@ iframe {
     height: 26vh;
     width: 75vw;
   }
-  .mySwiper1 .swiper-slide {
-    width: 28.82rem !important;}
+
 
   .neet-2020-toppers-a {
     font-size: 1.3rem;
