--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -33,8 +33,7 @@
         </button>
         <div class="collapse" id="about-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
-            <li><a href="#" class="link-dark rounded ahover">History</a></li>
-            <li><a href="#" class="link-dark rounded ahover">Our Leaders</a></li>
+            <li><a href="/admin/aboutus/history" class="link-dark rounded ahover">History</a></li>
           </ul>
         </div>
       </li>
