--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -126,12 +126,12 @@ tbody{
 	position: fixed;
 	height: 100vh;
 	width: 100%;
-	z-index: 5;
+	opacity: 0;
+	z-index: -5;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	background: rgba(104, 100, 100, 0.671);
-
 }
 
 .interior{
