--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin panel</title>
     <!-- <link rel="stylesheet" href="alert/dist/sweetalert.css"> -->
-    <link rel="stylesheet" href="sweetalert2.min.css">
+    <link rel="stylesheet" href="sweetalert2.min.css" />
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -16,33 +17,36 @@
     />
   </head>
   <body>
+    
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSidebar') %></div>
       <div class="right">
         <div class="preview">
-          <h1 class="mb-5">Latest Updates</h1>
+          <h1 class="mb-5">COURSE-NEET</h1>
           <form
             action="/admin/latestupdates"
             method="post"
             class="d-flex justify-content-center align-items-center flex-column"
-            style="width: 100%;"
+            style="width: 100%"
           >
             <div class="input-group flex-nowrap" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">Add News</span>
-              <input
-                type="text"
-                name="uploadlink"
-                class="form-control"
-                aria-label="Username"
-                aria-describedby="addon-wrapping"
-                id="uploadlink"
-                required
-              />
+              <span class="input-group-text" id="addon-wrapping">Content</span>
+              <textarea class="form-control formtextarea" name="<%#  %>"  cols="60" style="height: 155px; resize: none;" maxlength="250" >
+              
+              </textarea>
             </div>
+            <p class="spanp d-flex">Characters left &nbsp;<span class="changablespan"></span><span>/250</span></p>
             <div>
-            <button type="button" class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn">Back</button>
-            <button type="submit" class="btn btn-outline-primary mt-5">submit</button>
+              <button
+                type="button"
+                class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+              >
+                Back
+              </button>
+              <button type="submit" class="btn btn-outline-primary mt-5">
+                submit
+              </button>
             </div>
           </form>
         </div>
@@ -51,37 +55,45 @@
           method="post"
           class="imgform latestupdateform"
         >
-          <h1 class="m-5">Latest Updates</h1>
+          <h1 class="m-5">COURSE-NEET</h1>
 
           <table class="table" style="width: 70%">
             <thead>
               <tr>
-                <th scope="col">Current Link</th>
+                <th scope="col">overview</th>
+                <th scope="col">methodology</th>
                 <th scope="col">Updates</th>
               </tr>
             </thead>
             <tbody>
-              <% link.forEach(i => { %>
+              <% content.forEach(i => { %>
               <tr>
                 <td>
                   <input
                     type="text"
-                    id="linkinput"
-                    value="<%= i %>"
+                    id="overview"
+                    value="<%= i.overview %>"
                     readonly
-                    style="width: 80%; border: none;"
-
+                    style="width: 80%; border: none"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="text"
+                    id="methodology"
+                    value="<%= i.methodology %>"
+                    readonly
+                    style="width: 80%; border: none"
                   />
                 </td>
                 <td>
                   <input
                     type="checkbox"
                     id="checkbox"
-                    class="updatesCheckbox "
+                    class="updatesCheckbox"
                     name="checkbox"
-                    value="<%= i %>"
-                    style="height: 20px; width: 20px; "
-                    
+                    value="<%= i.overview %>"
+                    style="height: 20px; width: 20px"
                   />
                 </td>
               </tr>
@@ -89,8 +101,8 @@
             </tbody>
           </table>
           <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4" >
-              Add
+            <button type="button" class="btn btn-outline-primary addbtn px-4">
+              Update
             </button>
             <button
               type="button"
@@ -105,7 +117,7 @@
     <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.js" integrity="sha512-K3MtzSFJk6kgiFxCXXQKH6BbyBrTkTDf7E6kFh3xBZ2QNMtb6cU/RstENgQkdSLkAZeH/zAtzkxJOTTd8BqpHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <script src="../../javascripts/admin/home/LatestUpdates.js"></script>
+    <script src="../../javascripts/admin/aboutus/history.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
